couple of nav fixes for alignment aand margins

--- a/site/styles/_nav.scss
+++ b/site/styles/_nav.scss
@@ -10,7 +10,8 @@
 
   .btn-signup,
   .btn-signin,
-  .navbar-search {
+  .btn-navbar-search,
+  .navbar-nav-user-nav {
     margin-top: $navbar-padding-y * 2;
 
     @include media-breakpoint-down(md){
@@ -19,7 +20,7 @@
 
     @include media-breakpoint-up(md){
       margin-top: 0;
-      margin-right: .2rem; //just a little gap
+      margin-left: .2rem; //just a little gap
     }
   }
 }
@@ -69,25 +70,15 @@
 .navbar-nav-user-nav {
 
   .s72-dropdown-toggle {
-
+    color: $navbar-nav-link-color;
     display: block;
 
-    @include media-breakpoint-up(md){
+    @include media-breakpoint-up(md) {
       display: inline-block;
     }
-
-    color: $navbar-nav-link-color;
 
     @include hover-focus {
       color: $navbar-nav-link-hover-color;
     }
-  }
-
-  margin-bottom: 1rem;
-
-  @include media-breakpoint-up(md){
-
-    margin-bottom: 0;
-
   }
 }
